# EN-OS-System-Manager

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
python/etc/skel/.config/autostart/: en-system-manager.desktop
python/usr/share/EN-start-manager/: EN-OS-Driver_Manager.py  EN-OS-Remote_Assistent_Creator.py  EN-OS-Start_Manager.py  build.sh  build2.sh  colors.py  go.mod  go.sum  main.go
python/usr/share/applications/: en-system-manager.desktop
src/: default.css  index.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: data.rs  main.rs
