[package]
name = "en-os-system-manager"
version = "0.1.0"
description = "EN-OS System Manager"
authors = ["Endscape"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = false
lto = true
panic = "abort"
opt-level = "z"
